Fix scrollbars

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -44,7 +44,7 @@ header {
 }
 
 main {
-    padding: 3.5em 2em;
+    padding: 3.5em 2em 2em 2em;
 }
 
 footer {
@@ -53,7 +53,7 @@ footer {
     right: 0;
     bottom: 0;
     padding: 1em 2em;
-    height: 5em;
+    height: 3em;
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
